--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         // init controls for camera
         var markerControls = new THREEx.ArMarkerControls(arToolkitContext, camera, {
             type : 'nft',
-            descriptorsUrl : 'https://github.com/velickolb/velickolb.github.io/blob/master/test/test',
+            descriptorsUrl : 'test/test',
             changeMatrixMode: 'cameraTransformMatrix'
         })
   
