--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-<!-- three.js library -->
-<script src='vendor/three.js/build/three.min.js'></script>
-<!-- three.js load GLTF -->
-<script src='vendor/three.js/GLTFLoader.js'></script>
-<!-- ar.js -->
-<script src='../build/ar-nft.js'></script>
+<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+
+<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
+<script>
+
+
 
 <script>THREEx.ArToolkitContext.baseURL = '../'</script>
 
