--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </video>
         </a-assets>
 
-        <a-nft
+      <!--  <a-nft
             videohandler
             type='nft' url='test/test'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
@@ -72,7 +72,7 @@
                 height='175'
                 >
             </a-video>
-        </a-nft>
+        </a-nft> -->
 		<a-entity camera></a-entity>
-	</a-scene>
+	</a-scene> 
 </body>
