--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <a-nft
             videohandler
-            type='nft' url='https://github.com/velickolb/velickolb.github.io/tree/master/test/test'
+            type='nft' url='http://www.bomsolutions.ch/web-gl/test/test'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
         >
             <a-video
