--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <a-nft
             videohandler
-            type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/velickolb/velickolb.github.io/tree/master/test/VR_cinema'
+            type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/data/dataNFT/pinball'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
         >
             <a-video
