--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <a-nft
             videohandler
-            type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/velickolb/velickolb.github.io/tree/master/test/VR_cinema'
+            type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="25"
         >
             <a-video
