--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <a-nft
             videohandler
-            type='nft' url='/test/pinball'
+            type='nft' url='/test/lcdp'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
         >
             <a-video
