--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <a-nft
             videohandler
-            type='nft' url='https://velickolb.github.io/test/img'
+            type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/velickolb/OnlineAssets/master/test'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
         >
             <a-video
