--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <a-nft
             videohandler
-            type='nft' url='/web-gl/test/test'
+            type='nft' url='https://raw.githack.com/velickolb/velickolb.github.io/tree/master/test/test'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
         >
             <a-video
