--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <a-video
                 src="#vid"
                 position='250 500 -200'
+		rotation='90'
                 width='300'
                 height='175'
                 >
