--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         >
             <a-video
                 src="#vid"
-                position='250 500 -200'
-		rotation='90'
+                position='0 0 0'
+		rotation='90 180'
                 width='300'
                 height='175'
                 >
