--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         >
             <a-video
                 src="#vid"
-                position='250 00'
+                position='250 -150 100'
 		rotation='90 180'
                 width='300'
                 height='175'
