--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@
 
         <a-nft
             videohandler
-            type='nft' url='https://bomsolutions.ch/web-gl/test/test'
+            type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/data/dataNFT/pinball'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
         >
             <a-video
                 src="#vid"
-                position='110 120 -50'
-		
+                position='50 150 -100'
                 width='300'
                 height='175'
                 >
@@ -76,3 +75,4 @@
 		<a-entity camera></a-entity>
 	</a-scene>
 </body>
+
