--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
 
         <a-nft
             videohandler
-            type='nft' url='https://bomsolutions.ch/web-gl/test/test'
+            type='nft' url='https://github.com/velickolb/velickolb.github.io/tree/master/test/test'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
         >
             <a-video
                 src="#vid"
                 position='50 150 -100'
-                width='300'
+                rotation= '90 180'
+		     width='300'
                 height='175'
                 >
             </a-video>
