--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <a-nft
             videohandler
-            type='nft' url='https://bomsolutions.ch/web-gl/test/glava'
+            type='nft' url='https://github.com/velickolb/OnlineAssets/glava'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
         >
             <a-video
