--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <a-video
                 src="#vid"
                 position='50 150 -100'
+		     rotate= '90'
 	        width='300'
                 height='175'
                 >
