--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 
         <a-nft
             videohandler
-            type='nft' url='https://bomsolutions.ch/web-gl/test/glava'
+            type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/data/dataNFT/pinball'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
         >
             <a-video
                 src="#vid"
                 position='50 150 -100'
-	        width='300'
+                width='300'
                 height='175'
                 >
             </a-video>
@@ -75,4 +75,3 @@
 		<a-entity camera></a-entity>
 	</a-scene>
 </body>
-
