--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         >
             <a-video
                 src="#vid"
-                position='50 150 -100'
-		rotate='90'
+                position='50 150 -200'
+		rotation='90 180'
                 width='300'
                 height='175'
                 >
