--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/velickolb/OnlineAssets/master/pera'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                gltf-model='cube.glb'
+                gltf-model='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/velickolb/velickolb.github.io/master/cube1.gltf'
                 scale="5 5 5"
                 position="50 150 -100"
                 >
