--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<script src='https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js'></script>
+<script src='https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js'></script>
 
 <style>
   .arjs-loader {
@@ -39,7 +39,7 @@
             type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/velickolb/OnlineAssets/master/pera'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                gltf-model='https://raw.githack.com/velickolb/velickolb.github.io/master/cube1.gltf'
+                gltf-model='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf'
                 scale="5 5 5"
                 position="50 150 -100"
                 >
@@ -48,3 +48,4 @@
 		<a-entity camera></a-entity>
     </a-scene>
 </body>
+
