--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
                 >
             </a-entity>
         </a-nft>
-		<a-entity camera></a-entity>
+		<a-entity camera = "far: 50000"></a-entity>
     </a-scene>
 </body>
