--- a/index.html
+++ b/index.html
@@ -38,12 +38,8 @@
         <a-nft
             type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/velickolb/OnlineAssets/master/New Project (17)'
             smooth='true' smoothCount='20' smoothTolerance='0.01' smoothThreshold='10' size='0.4'>
-            <a-entity
-                gltf-model='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf'
-                scale="10 10 10"
-                position="0 0 0"
-                >
-            </a-entity>
+            
+		<a-box position="0 0 0" rotation="0 45 0" color="#4CC3D9"></a-box>
         </a-nft>
 		<a-entity camera = "far: 50000"></a-entity>
     </a-scene>
