--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/velickolb/OnlineAssets/master/New Project (17)'
             smooth='true' smoothCount='20' smoothTolerance='0.01' smoothThreshold='10' size='0.4'>
             
-		<a-box position="0 0 0" rotation="0 45 0" color="#4CC3D9"></a-box>
+		<a-entity geometry="primitive: box; width: 5" material="color: red"></a-entity>
+
         </a-nft>
 		<a-entity camera = "far: 50000"></a-entity>
     </a-scene>
